--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
         <main>
             <section class="message">
-                <h2>My Dearest [Her Name],</h2>
+                <h2>Haerimahh, My Dearest Vampire Baby,</h2>
                 <p>Will you be my Valentine? <br> Let’s make this day unforgettable! 💖</p>
             </section>
 
