--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
         <main>
             <section class="message">
-                <h2>Haerimahh, My Dearest Vampire Baby,</h2>
-                <p>Will you be my Valentine? <br> Let’s make this day unforgettable! 💖</p>
+                <h2> Haerimahh, My Dearest Vampire Baby 💖 </h2>
+                <p>Will you be my Valentine? 🥺 <br> Let’s make our 100th day unforgettable! </p>
             </section>
 
             <section class="date-details">
@@ -24,10 +24,11 @@
             </section>
 
             <button id="accept-btn">I Accept! Let's Go!</button>
+            <button id="reject-btn">Nah I'm good thanks (Nuuuu) </button>
         </main>
 
         <footer>
-            <p>Created with love by [Your Name]</p>
+            <p>Created with love by your third korean bias 🥰 </p>
         </footer>
     </div>
 
