--- a/index.html
+++ b/index.html
@@ -19,12 +19,14 @@
             </section>
 
             <section class="date-details">
-                <h3>Details:</h3>
-                <p>🎶 A candle-lit dinner, just the two of us. <br> 🌹 A night to remember. <br> 💕 Will you say yes?</p>
+                <h3>Details for Friday 14th:</h3>
+                <p>🎶 A candle-lit dinner at *****, just the two of us. <br> 🌹 A night to remember from *** ***** <br> 💕 Will you say yes?</p>
+                 <h3>Details for Saturday 15th:</h3>
+                <p>To be continued if you accept 😉 </p>
             </section>
 
-            <button id="accept-btn">I Accept! Let's Go!</button>
-            <button id="reject-btn">Nah I'm good thanks (Nuuuu) </button>
+            <button id="accept-btn">I Accept! Let's Go! 🥂</button>
+            <button id="reject-btn">Nah I'm good thanks 😭 </button>
         </main>
 
         <footer>
