--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
 
         <main>
             <section class="message">
-                <h2> Haerimahh, My Dearest Vampire Baby 💖 </h2>
+                <h2> Haerimahh, My Dear Vampire Baby 💖</h2>
                 <p>Will you be my Valentine? 🥺 <br> Let’s make our 100th day unforgettable! </p>
             </section>
 
             <section class="date-details">
                 <h3>Details for Friday 14th:</h3>
-                <p>🎶 A candle-lit dinner at *****, just the two of us. <br> 🌹 A night to remember from *** ***** <br> 💕 Will you say yes?</p>
+                <p>🤩 A star-studded dinner at *****, just the two of us. <br> 🌟 Panoramic views to marvel at *** ***** <br> 💕 Will you say yes?</p>
                  <h3>Details for Saturday 15th:</h3>
-                <p>To be continued if you accept 😉 </p>
+                <p>❔ Accept and we can plan it out 😉 </p>
             </section>
 
             <button id="accept-btn">I Accept! Let's Go! 🥂</button>
@@ -30,7 +30,7 @@
         </main>
 
         <footer>
-            <p>Created with love by your third korean bias 🥰 </p>
+            <p>Created with love by your third korean fav 🥰 </p>
         </footer>
     </div>
 
