--- a/index.html
+++ b/index.html
@@ -19,9 +19,12 @@
             </section>
 
             <section class="date-details">
-                <h3>Details for Friday 14th:</h3>
+                <h3>Friday 14th itinerary:</h3>
                 <p>🤩 A star-studded dinner at *****, just the two of us. <br> 🌟 Panoramic views to marvel at *** ***** <br> 💕 Will you say yes?</p>
-                 <h3>Details for Saturday 15th:</h3>
+            </section>
+
+            <section class="date-details">
+                 <h3>Saturday 15th itinerary:</h3>
                 <p>❔ Accept and we can plan it out 😉 </p>
             </section>
 
