--- a/index.html
+++ b/index.html
@@ -15,17 +15,17 @@
         <main>
             <section class="message">
                 <h2> Haerimahh, My Dear Vampire Baby 💖</h2>
-                <p>Will you be my Valentine? 🥺 <br> Let’s make our 100th day unforgettable! </p>
+                <p>Will you be my Valentine? 🥺 <br> Let’s make our 100th (&101st) day unforgettable! </p>
             </section>
 
             <section class="date-details">
                 <h3>Friday 14th itinerary:</h3>
-                <p>🤩 A star-studded dinner at *****, just the two of us. <br> 🌟 Panoramic views to marvel at *** ***** <br> 💕 Will you say yes?</p>
+                <p>🤩 A star-studded dinner at ******, just the two of us. <br> 🌟 City-night views to marvel at from ***** <br> 💕 Will you say yes?</p>
             </section>
 
             <section class="date-details">
                  <h3>Saturday 15th itinerary:</h3>
-                <p>❔ Accept and we can plan it out 😉 </p>
+                <p>❔ Press Accept and we can plan it out 😉 </p>
             </section>
 
             <button id="accept-btn">I Accept! Let's Go! 🥂</button>
@@ -33,7 +33,7 @@
         </main>
 
         <footer>
-            <p>Created with love by your third korean fav 🥰 </p>
+            <p>Created with love by your third korean fav 🥰 <br> Ft. JavaScript, HTML & CSS 😚 </p>
         </footer>
     </div>
 
