--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <!-- First Page: Valentine's Invitation -->
     <div class="container">
+        <div id="invitationPage">
         <header>
             <h1>Valentine's Day Invitation</h1>
         </header>
@@ -32,7 +34,34 @@
             <button id="reject-btn">Nah I'm good thanks 😭 </button>
         </main>
 
-        <footer>
+    <!-- Second Page: Itinerary Selection -->
+    <div id="itineraryPage" style="display: none;">
+        <h1>Choose Your Valentine's Day Itinerary</h1>
+        <div class="itinerary-container">
+            <form id="itineraryForm">
+                <label>
+                    <input type="checkbox" name="activity" value="Dinner at a Fancy Restaurant"> Dinner at a Fancy Restaurant
+                </label>
+                <label>
+                    <input type="checkbox" name="activity" value="Outdoor Picnic"> Outdoor Picnic
+                </label>
+                <label>
+                    <input type="checkbox" name="activity" value="Movie Night"> Movie Night
+                </label>
+                <label>
+                    <input type="checkbox" name="activity" value="Spa Day"> Spa Day
+                </label>
+                <label>
+                    <input type="checkbox" name="activity" value="Art Gallery Visit"> Art Gallery Visit
+                </label>
+                <br><br>
+                <button type="submit" class="submit-btn">Submit Itinerary</button>
+            </form>
+        </div>
+    </div>
+</div>
+
+            <footer>
             <p>Created with love by your third korean fav 🥰 <br> Ft. JavaScript, HTML & CSS 😚 </p>
         </footer>
     </div>
