--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <p>❔ Press Accept and we can plan it out 😉 </p>
                 </section>
     
-                <button id="accept-btn">I Accept! Let's Go! 🥂</button>
+                <button class="invite-btn" id="accept-btn">I Accept! Let's Go! 🥂</button>
                 <button id="reject-btn">Nah I'm good thanks 😭 </button>
             </main>
 
@@ -62,9 +62,12 @@
                 <br><br>
                 <button type="submit" class="submit-btn">Submit Itinerary</button>
             </form>
+
+            <footer>
+                <p>Created with love by your third korean fav 🥰 <br> Ft. JavaScript, HTML & CSS 😚 </p>
+            </footer>
         </div>
     </div>
-</div>
 
     <script src="script.js"></script>
 </body>
