--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 </section>
     
                 <button class="invite-btn" id="accept-btn">I Accept! Let's Go! 🥂</button>
-                <button id="reject-btn">Nah I'm good thanks 😭 </button>
+                <button class="invite-btn" id="reject-btn">Nah I'm good thanks 😭 </button>
             </main>
 
             <footer>
