--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
                 <p>🤩 A star-studded dinner at ******, just the two of us. <br> 🌟 City-night views to marvel at from ***** <br> 💕 Will you say yes?</p>
             </section>
 
+            <section class="date-details">
+                     <h3>Saturday 15th itinerary:</h3>
+                    <p>❔ Press Accept and we can plan it out 😉 </p>
+            </section>
+
             <button class="invite-btn" id="accept-btn">I Accept! Let's Go! 🥂</button>
             <button class="invite-btn" id="reject-btn">Nah I'm good thanks 😭</button>
         </main>
