--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
             </section>
 
             <button class="invite-btn" id="accept-btn">I Accept! Let's Go! 🥂</button>
-            <button class="invite-btn" id="reject-btn">Nah I'm good thanks 😭</button>
+            <button class="invite-btn" id="reject-btn">Nah I'm good (😭)</button>
         </main>
     </div> <!-- End of Invitation Page -->
 
-    <!-- Second Page Moved Inside the Same Container -->
+    <!-- Second Page: Itinerary page once accepted -->
     <div id="itineraryPage" style="display: none;">
         <h1>Choose Your Valentine's Day Itinerary</h1>
         <div class="itinerary-container">
