--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </section>
 
             <button class="invite-btn" id="accept-btn">I Accept! Let's Go! 🥂</button>
-            <button class="invite-btn" id="reject-btn">Nah I'm good (😭)</button>
+            <button class="invite-btn" id="reject-btn">Nah I'm busy 😭</button>
         </main>
     </div> <!-- End of Invitation Page -->
 
