--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     </div> <!-- End of Itinerary Page -->
 
     <footer>
-        <p>Created with love by your third Korean fav 🥰 <br> Ft. JavaScript, HTML & CSS 😚</p>
+        <p>Created with love by your third fav Korean 🥰 <br> Ft. JavaScript, HTML & CSS 😚</p>
     </footer>
 </div> <!-- End of Container -->
 
