--- a/index.html
+++ b/index.html
@@ -39,28 +39,28 @@
         <h1>Choose Your Valentine's Day Itinerary</h1>
         <div class="itinerary-grid">
         
-        <div class="itinerary-item" onclick="toggleSelection(this)">
+        <div class="itinerary-item">
             <input type="checkbox" name="activity" value="Movie Night" hidden>
             <img src="images/Movie.jpg" alt="Cinema" class="activity-img">
             <div class="tick">✔</div>
             <span>Movie Night 🎬</span>
         </div>
 
-        <div class="itinerary-item" onclick="toggleSelection(this)">
+        <div class="itinerary-item">
             <input type="checkbox" name="activity" value="Romantic Dinner" hidden>
             <img src="images/Romantic Dinner.jpg" alt="Romantic Dinner" class="activity-img">
             <div class="tick">✔</div>
             <span>Romantic Dinner 🍽️</span>
         </div>
 
-        <div class="itinerary-item" onclick="toggleSelection(this)">
+        <div class="itinerary-item">
             <input type="checkbox" name="activity" value="Beach Walk" hidden>
             <img src="images/Beach Walk.jpg" alt="Beach Walk" class="activity-img">
             <div class="tick">✔</div>
             <span>Beach Walk 🌊</span>
         </div>
 
-        <div class="itinerary-item" onclick="toggleSelection(this)">
+        <div class="itinerary-item">
             <input type="checkbox" name="activity" value="Stargazing" hidden>
             <img src="images/Stargazing.jpg" alt="Stargazing" class="activity-img">
             <div class="tick">✔</div>
