--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Valentine's Day Invitation</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAdPAQnf7GgnjYvhCglti-Pj3w1tzPSrbY&callback=initMap" async defer></script>
 </head>
 <body>
     <!-- First Page: Valentine's Invitation -->
@@ -42,7 +43,7 @@
         <div class="itinerary-category">
             <h2 class="category-title">Food & Dining</h2>
             <div class="itinerary-grid">
-                <label class="itinerary-item">
+                <label class="itinerary-item" data-lat="51.5033" data-lng="-0.1195">
                     <input type="checkbox" name="activity" value="Romantic Dinner" hidden>
                     <img src="images/Romantic Dinner.jpg" alt="Romantic Dinner" class="activity-img">
                     <div class="tick">✔</div>
@@ -55,7 +56,7 @@
         <div class="itinerary-category">
             <h2 class="category-title">Activities</h2>
             <div class="itinerary-grid">
-                <label class="itinerary-item">
+                <label class="itinerary-item" data-lat="51.5033" data-lng="-0.1195">
                     <input type="checkbox" name="activity" value="Beach Walk" hidden>
                     <img src="images/Beach Walk.jpg" alt="Beach Walk" class="activity-img">
                     <div class="tick">✔</div>
@@ -68,14 +69,14 @@
         <div class="itinerary-category">
             <h2 class="category-title">Quality Time</h2>
             <div class="itinerary-grid">
-                <label class="itinerary-item">
+                <label class="itinerary-item" data-lat="51.5033" data-lng="-0.1195">
                     <input type="checkbox" name="activity" value="Movie Night" hidden>
                     <img src="images/Movie.jpg" alt="Cinema" class="activity-img">
                     <div class="tick">✔</div>
                     <span>Movie Night 🎬</span>
                 </label>
 
-                <label class="itinerary-item">
+                <label class="itinerary-item" data-lat="51.5033" data-lng="-0.1195">
                     <input type="checkbox" name="activity" value="Stargazing" hidden>
                     <img src="images/Stargazing.jpg" alt="Stargazing" class="activity-img">
                     <div class="tick">✔</div>
@@ -83,8 +84,10 @@
                 </label>
             </div>
         </div>
-        
-    <button type="submit" class="submit-btn" onclick="submitSelection()">Confirm Selection</button>
+
+        <div id="map"></div> <!-- Map Container -->
+            <button type="submit" class="submit-btn" onclick="submitSelection()">Confirm Selection</button>
+        </div>
     </div> <!-- End of Itinerary Page -->
 
     <footer>
