--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="itinerary-category">
             <h2 class="category-title">Food & Dining</h2>
             <div class="itinerary-grid">
-                <label class="itinerary-item" data-lat="51.5033" data-lng="-0.1195">
+                <label class="itinerary-item" data-place="London Eye, London">
                     <input type="checkbox" name="activity" value="Romantic Dinner" hidden>
                     <img src="images/Romantic Dinner.jpg" alt="Romantic Dinner" class="activity-img">
                     <div class="tick">✔</div>
@@ -56,7 +56,7 @@
         <div class="itinerary-category">
             <h2 class="category-title">Activities</h2>
             <div class="itinerary-grid">
-                <label class="itinerary-item" data-lat="51.5033" data-lng="-0.1195">
+                <label class="itinerary-item" data-place="London Eye, London">
                     <input type="checkbox" name="activity" value="Beach Walk" hidden>
                     <img src="images/Beach Walk.jpg" alt="Beach Walk" class="activity-img">
                     <div class="tick">✔</div>
@@ -69,14 +69,14 @@
         <div class="itinerary-category">
             <h2 class="category-title">Quality Time</h2>
             <div class="itinerary-grid">
-                <label class="itinerary-item" data-lat="51.5033" data-lng="-0.1195">
+                <label class="itinerary-item" data-place="The Shard, London">
                     <input type="checkbox" name="activity" value="Movie Night" hidden>
                     <img src="images/Movie.jpg" alt="Cinema" class="activity-img">
                     <div class="tick">✔</div>
                     <span>Movie Night 🎬</span>
                 </label>
 
-                <label class="itinerary-item" data-lat="51.5033" data-lng="-0.1195">
+                <label class="itinerary-item" data-place="The Shard, London">
                     <input type="checkbox" name="activity" value="Stargazing" hidden>
                     <img src="images/Stargazing.jpg" alt="Stargazing" class="activity-img">
                     <div class="tick">✔</div>
