--- a/index.html
+++ b/index.html
@@ -84,12 +84,10 @@
             </div>
         </div>
 
-        <button type="submit" class="submit-btn" onclick="submitSelection()">Confirm Selection</button>
-    </div> <!-- End of Itinerary Page -->
-
         <div class="map-container">
-        <div id="map"></div> <!-- Map Container -->
-    </div>   
+        <div id="map"></div>
+            <button type="submit" class="submit-btn" onclick="submitSelection()">Confirm Selection</button>
+        </div> <!-- End of Itinerary Page --> 
 
     <footer>
         <p>Created with love by your third fav Korean 🥰 <br> Ft. JavaScript, HTML & CSS 😚</p>
