--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Valentine's Day Invitation</title>
     <link rel="stylesheet" href="styles.css">
-    <script async defer loading="async"  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAdPAQnf7GgnjYvhCglti-Pj3w1tzPSrbY&callback=initMap" async defer></script>
+    <script async defer loading="async"  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAdPAQnf7GgnjYvhCglti-Pj3w1tzPSrbY&libraries=places&callback=initMap" async defer></script>
 </head>
 <body>
     <!-- First Page: Valentine's Invitation -->
