--- a/index.html
+++ b/index.html
@@ -83,17 +83,22 @@
                 </label>
             </div>
         </div>
+    </div>
 
-        <div class="map-container">
-        <div id="map"></div>
-            <button type="submit" class="submit-btn" onclick="submitSelection()">Confirm Selection</button>
-        </div> <!-- End of Itinerary Page --> 
+            <!-- Right Side: Map Section -->
+            <div class="map-section">
+                <div class="map-container">
+                    <div id="map"></div>
+                </div>
+                <button type="submit" class="submit-btn" onclick="submitSelection()">Confirm Selection</button>
+            </div>
+        </div>
 
-    <footer>
-        <p>Created with love by your third fav Korean 🥰 <br> Ft. JavaScript, HTML & CSS 😚</p>
-    </footer>
-</div> <!-- End of Container -->
-
+        <!-- Footer on Itinerary Page -->
+        <footer>
+            <p>Created with love by your third fav Korean 🥰 <br> Ft. JavaScript, HTML & CSS 😚</p>
+        </footer>
+    </div> <!-- End of Itinerary Page -->
 
     <script src="script.js"></script>
 </body>
