--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     <div class="itinerary-category">
                         <h2 class="category-title">Food & Dining</h2>
                         <div class="itinerary-grid">
-                            <label class="itinerary-item" data-place="London Eye, London">
+                            <label class="itinerary-item" data-place="Gaucho Tower Bridge, London">
                                 <input type="checkbox" name="activity" value="Romantic Dinner" hidden>
                                 <img src="images/Romantic Dinner.jpg" alt="Romantic Dinner" class="activity-img">
                                 <div class="tick">✔</div>
