--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
                 <!-- Right Side: Map Section -->
                 <div class="map-section">
                     <div class="map-container">
+                        <div id="place-details" class="place-details-container"></div>
                         <div id="map"></div>
                     </div>
                     <button type="submit" class="submit-btn" onclick="submitSelection()">Confirm Selection</button>
