--- a/index.html
+++ b/index.html
@@ -95,12 +95,12 @@
                 <!-- Right Side: Map Section -->
                 <div class="map-section">
                     <div class="map-container">
-                        <div id="place-details" class="place-details-container"></div>
-                        <div id="map"></div>
+                        <div id="map">
+                            <div id="place-details" class="place-details-container"></div> <!-- ✅ Now inside #map -->
+                        </div>
                     </div>
                     <button type="submit" class="submit-btn" onclick="submitSelection()">Confirm Selection</button>
                 </div>
-            </div>
 
             <!-- Footer inside the white box -->
             <footer class="footer">
