--- a/index.html
+++ b/index.html
@@ -95,9 +95,8 @@
                 <!-- Right Side: Map Section -->
                 <div class="map-section">
                     <div class="map-container">
-                        <div id="map">
+                        <div id="map"></div>
                             <div id="place-details" class="place-details-container"></div> <!-- ✅ Now inside #map -->
-                        </div>
                     </div>
                     <button type="submit" class="submit-btn" onclick="submitSelection()">Confirm Selection</button>
                 </div>
