--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
                         <div id="map"></div>
                             <div id="place-details" class="place-details-container"></div> <!-- ✅ Now inside #map -->
                     </div>
+                </div>    
                     <button type="submit" class="submit-btn" onclick="submitSelection()">Confirm Selection</button>
                 </div>
 
