--- a/index.html
+++ b/index.html
@@ -96,9 +96,8 @@
                 <div class="map-section">
                     <div class="map-container">
                         <div id="map"></div>
-                            <div id="place-details" class="place-details-container"></div> <!-- ✅ Now inside #map -->
+                        <div id="place-details" class="place-details-container"></div>
                     </div>
-                </div>    
                     <button type="submit" class="submit-btn" onclick="submitSelection()">Confirm Selection</button>
                 </div>
 
