--- a/index.html
+++ b/index.html
@@ -88,6 +88,13 @@
                                 <div class="tick">✔</div>
                                 <span>Stargazing ✨</span>
                             </label>
+
+                            <label class="itinerary-item" data-place="Stratford International, London">
+                                <input type="checkbox" name="activity" value="Homecooking" hidden>
+                                <img src="images/Homecooking.jpg" alt="Homecooking" class="activity-img">
+                                <div class="tick">✔</div>
+                                <span>Bf's cooking ❤️</span>
+                            </label>
                         </div>
                     </div>
                 </div>
