--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@
     </div> <!-- End of Itinerary Page -->
 
     <!-- Confirmation Page (Initially Hidden) -->
-    <div id="confirmationPage" class="hidden">
-        <div class="confirmation-container">
+    <div id="confirmationPage" style="display: none;">
+       <div class="confirmation-container">
             <img src="images/email-icon.png" class="email-icon">
             <h2>Your itinerary has been sent to your personal planner! 💌💖</h2>
             <p>Your personal planner will endeavour to bring you the most magical Valentine's Day (& After)! 🥰✨</p>
