--- a/index.html
+++ b/index.html
@@ -69,6 +69,13 @@
                                 <div class="tick">✔</div>
                                 <span>Beach Walk 🌊</span>
                             </label>
+
+                            <label class="itinerary-item" data-place="THE CUBE Canary Wharf, London">
+                                <input type="checkbox" name="activity" value="The cube" hidden>
+                                <img src="images/thecube.jpg" alt="The cube" class="activity-img">
+                                <div class="tick">✔</div>
+                                <span>The Cube 🎲 </span>
+                            </label>
                         </div>
                     </div>
 
