--- a/index.html
+++ b/index.html
@@ -124,12 +124,10 @@
     </div> <!-- End of Itinerary Page -->
 
     <!-- Confirmation Page (Initially Hidden) -->
-    <div id="confirmationPage" style="display: none;">
-       <div class="confirmation-container">
+    <div id="confirmationPage" class="confirmation-container" style="display: none; opacity: 0; transition: opacity 0.5s ease-in-out;">
             <img src="images/email-icon.png" class="email-icon">
             <h2>Your itinerary has been sent to your personal planner! 💌💖</h2>
             <p>Your personal planner will endeavour to bring you the most magical Valentine's Day (& After)! 🥰✨</p>
-        </div>
     </div>
 
     <script src="script.js"></script>
