--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                         <div id="map"></div>
                             <div id="place-details" class="place-details-container"></div>
                     </div>
-                    <button type="submit" class="submit-btn" onclick="submitSelection()">Confirm Selection</button>
+                    <button type="submit" class="submit-btn" >Confirm Selection</button>
                 </div>
 
             <!-- Footer inside the white box -->
